<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/login_title"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"

            />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="12dp"
            app:boxBackgroundColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/principal"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_senha"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            app:boxBackgroundColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/principal"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:text="@string/login_button_1"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:backgroundTint="@color/secundaria"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:gravity="center_vertical">

        <View
            android:layout_width="160dp"
            android:layout_height="1dp"
            android:background="@color/cinza_light"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_or"
            android:textColor="@color/cinza"
            android:textSize="18dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            />

        <View
            android:layout_width="160dp"
            android:layout_height="1dp"
            android:background="@color/cinza_light"
            />
    </LinearLayout>

    <Button
        android:id="@+id/loginRegisterButton"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:text="@string/register_title"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:backgroundTint="@color/cinza"
        />

</LinearLayout>