<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CadastroActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/register_title"
            app:navigationIcon="@drawable/ic_image2"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"

            />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_nome"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="12dp"
            app:boxBackgroundColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/principal"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_email"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="12dp"
            app:boxBackgroundColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/principal"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_senha"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="12dp"
            app:boxBackgroundColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/principal"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/conf_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_conf_senha"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            app:boxBackgroundColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/principal"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:text="@string/register_title"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:backgroundTint="@color/secundaria"
            />
    </LinearLayout>

</LinearLayout>